<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="100"
        android:title="Next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_sendMail"
        android:orderInCategory="101"
        android:title="@string/sendMail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@android:string/cancel"
        app:showAsAction="ifRoom|withText" />
</menu>