<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_courses" />
    </group>
    <item
        android:id="@+id/menu_communicate"
        android:title="@string/menu_communicate" />

    <group>
        <item
            android:id="@+id/menu_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/menu_send"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_send" />
    </group>
    <group>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />
    </group>
</menu>